# apng-encoder

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
app/: .gitignore  Cargo.toml
app/src/: errors.rs  main.rs
example/: Cargo.toml
example/src/: errors.rs  main.rs  usage.txt
src/: apng.rs  lib.rs
src/apng/: chunks.rs  encoder.rs  errors.rs  validators.rs
tests/: encoder.rs
