[package]
name = "apng-encoder"
version = "0.0.1"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[features]
benchmark = []

[dependencies]
byteorder = "*"
enum-iterator = "*"
enum-iterator-derive = "*"
failure = "*"
flate2 = "*"

[dev-dependencies]
image = "*"
rand = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
