[package]
name = "apng-encoder"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"
description = "APNG (Animated PNG) Encoder"
repository = "http://github.com/anekos/apng-encoder"
license-file = "LICENSE"

[features]
benchmark = []

[dependencies]
byteorder = "*"
enum-iterator = "*"
enum-iterator-derive = "*"
failure = "*"
flate2 = "*"

[dev-dependencies]
image = "*"
rand = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
