[package]
name = "apng-encoder"
version = "0.3.1-alpha.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"
description = "APNG (Animated PNG) Encoder"
repository = "http://github.com/anekos/apng-encoder"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
benchmark = []

[dependencies]
byteorder = "1.2"
enum-iterator = "0.3"
enum-iterator-derive = "0.3"
failure = "0.1"
flate2 = "1.0"

[dev-dependencies]
image = "0.21"
rand = "0.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
